<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.git_repository_details.GitRepositoryDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_15">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageIcon"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/git_icon"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_article_black_24dp" />

            <TextView
                android:id="@+id/repoNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                tools:text="Test Name" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:ellipsize="end"
            android:maxLines="2"
            android:minLines="2"
            android:text="Short descriptions..."
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_star_rate_black_24dp" />

                <TextView
                    android:id="@+id/starCountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingStart="@dimen/padding_5"
                    android:paddingEnd="0dp"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    tools:text="3030" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_eye" />

                <TextView
                    android:id="@+id/watchCountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingStart="@dimen/padding_5"
                    android:paddingEnd="0dp"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    tools:text="3030" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_frok_black_24dp" />

                <TextView
                    android:id="@+id/frokCountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingStart="@dimen/padding_5"
                    android:paddingEnd="0dp"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    tools:text="3030" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_issue_icon" />

                <TextView
                    android:id="@+id/issueCountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingStart="@dimen/padding_5"
                    android:paddingEnd="0dp"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    tools:text="3030" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/language"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/languageTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                tools:text="Test language" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/visibility"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/visibilityTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                tools:text="Test language" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/topics"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/topicsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                tools:text="Test language" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/created_at"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/createdAtTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                tools:text="Test" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/updated_at"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/updatedAtTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                tools:text="Test language" />
        </LinearLayout>


    </LinearLayout>

</layout>